--- a/.bld.yaml
+++ b/.bld.yaml
@@ -35,9 +35,9 @@ steps:
 
 - name: build
   image: golang:1.10-alpine
-  commands:
-  - go build -o /go/bin/bld github.com/coldog/bld/cmd/bld
   workdir: "/go/src/github.com/coldog/bld"
+  commands:
+  - go build -o /go/bin/bld ./cmd/bld
   imports:
   - source: pkg
     mount: "/go/src/github.com/coldog/bld/pkg"
@@ -49,7 +49,7 @@ steps:
   - source: bin
     mount: "/go/bin"
 
-- name: test-build
+- name: test
   image: golang:1.10-alpine
   commands:
   - "/go/bin/bld -h || echo ok"
@@ -57,3 +57,17 @@ steps:
   imports:
   - source: bin
     mount: "/go/bin"
+
+- name: image
+  image: alpine:3.8
+  imports:
+  - source: bin
+    mount: /mnt
+  commands:
+  - apk add --no-cache ca-certificates
+  - cp /mnt/bld /bin/bld
+  save:
+    tag: "docker.io/coldog/bld:{{ .Git.ShaShort }}"
+    entrypoint: ["/bin/bld"]
+    push: true
+    registry_auth: "{{ .Environ.DOCKER_AUTH }}"
