--- a/pkg/builder/testdata/.bld.yaml
+++ b/pkg/builder/testdata/.bld.yaml
@@ -24,5 +24,5 @@ steps:
   imports:
   - source: deps
     mount: "/usr/src/app"
-  - source: sub+modules
+  - source: sub_modules
     mount: "/usr/src/app"
